--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -r esm api.test.js"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -20,11 +20,17 @@
     "nodemon": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.7",
+    "@babel/register": "^7.23.7",
+    "@types/chai-http": "^4.2.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^5.0.0",
     "esm": "^3.2.25",
     "jest": "^29.7.0",
     "mocha": "^10.2.0",
+    "superagent": "^8.1.2",
     "supertest": "^6.3.3"
-  },
-  "type": "module"
+  }
 }
